--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+.card{
+    width: 18rem;
+}
+.peopleDiv{
+    height: 200px;
+}
+.title{
+    font-family: 'Lobster', cursive;
+    color: red;
+}
